# aletheia-eval

./: README.md  docker-compose.yml
client/: CMakeLists.txt  Dockerfile  client.cpp
models/resnet50/: config.pbtxt
